<resources>
    <string name="app_name">Toolt</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="collect">COLLECT</string>
    <string name="home">HOME</string>
    <string name="more">MORE</string>

    <string name="drawer_all">ALL FUNCTIONS</string>
    <string name="drawer_theme">THEME</string>
    <string name="drawer_setting">SETTING</string>
    <string name="drawer_about">ABOUT</string>
    <string name="drawer_finish">FINISH</string>

    <string name="slogan">hello toolt</string>
    <string name="tip_double_click_exit">click twice to finish</string>

    <string name="collect_zero">ZERO</string>

    <string name="select">SELECT</string>

    <string name="save">SAVE</string>
    <string name="save_theme_hint">Restart to change</string>
</resources>