<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/drawer_all"
          android:icon="@drawable/ic_all"
          android:title="@string/drawer_all"></item>
    <item android:id="@+id/drawer_theme"
          android:icon="@drawable/ic_theme"
          android:title="@string/drawer_theme"></item>
    <item android:id="@+id/drawer_setting"
          android:icon="@drawable/ic_setting"
          android:title="@string/drawer_setting"></item>
    <item android:id="@+id/drawer_about"
          android:icon="@drawable/ic_about"
          android:title="@string/drawer_about"></item>
    <item android:id="@+id/drawer_finish"
          android:icon="@drawable/ic_finish"
          android:title="@string/drawer_finish"></item>
</menu>